# SparseStereo

./: CMakeLists.txt  README.txt
SparseStereo/: CMakeLists.txt  Mat_32.hpp  SparseStereo.cpp  SparseStereo.hpp
demo/: CMakeLists.txt  main.cpp
